--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build:android": "ionic capacitor build android",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -20,7 +20,13 @@
     "@angular/platform-browser-dynamic": "~13.0.0",
     "@angular/router": "~13.0.0",
     "@awesome-cordova-plugins/core": "^5.37.3",
-    "@awesome-cordova-plugins/sqlite": "^5.37.3",
+    "@awesome-cordova-plugins/sqlite": "^5.46.0",
+    "@capacitor/android": "4.6.0",
+    "@capacitor/app": "4.1.1",
+    "@capacitor/core": "4.6.0",
+    "@capacitor/haptics": "4.1.0",
+    "@capacitor/keyboard": "4.1.0",
+    "@capacitor/status-bar": "4.1.1",
     "@ionic-native/sqlite": "^5.36.0",
     "@ionic/angular": "^6.0.0",
     "rxjs": "~6.6.0",
@@ -37,6 +43,7 @@
     "@angular/compiler": "~13.0.0",
     "@angular/compiler-cli": "~13.0.0",
     "@angular/language-service": "~13.0.0",
+    "@capacitor/cli": "4.6.0",
     "@ionic/angular-toolkit": "^5.0.0",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
